update manifest.json to add a few more URL prefixes

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,9 @@
     "default_locale": "he",
     "content_scripts": [
         {
-            "matches": ["https://app.codemonkey.com/challenges/*"],
+            "matches": ["https://app.codemonkey.com/challenges/*",
+                        "https://app.codemonkey.com/skill_challenges/*",
+                        "https://app.codemonkey.com/math_challenges/*"],
             "js": ["contentScript.js"]
         }
     ],
