Change manifest to operate on all of app.codemonkey.com. Support translations for game buttons

--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,7 @@
     "default_locale": "he",
     "content_scripts": [
         {
-            "matches": ["https://app.codemonkey.com/challenges/*",
-                        "https://app.codemonkey.com/skill_challenges/*",
-                        "https://app.codemonkey.com/math_challenges/*"],
+            "matches": ["https://app.codemonkey.com/*"],
             "js": ["contentScript.js"]
         }
     ],
